--- a/src/partials/head.html
+++ b/src/partials/head.html
@@ -8,6 +8,6 @@
 <meta name="format-detection" content="telephone=no">
 <meta name="description" content="">
 
-<link rel="stylesheet" href="/assets/css/style.css">
+<link rel="stylesheet" href="assets/css/style.min.css">
 
 <title>{{title}}</title>
