fixed some lines positions

--- a/src/assets/scss/blocks/f6.scss
+++ b/src/assets/scss/blocks/f6.scss
@@ -14,6 +14,7 @@
     left: 0;
 }
 .f6__container {
+    position: relative;
     max-width: 1283px;
     margin: 0 auto;
 }
@@ -112,13 +113,8 @@
 }
 .f6-curve {
     position: absolute;
-    top: 764px;
-    left: 76px;
-   
-}
-.curve-6__svg {
-    position: absolute;
-    top: -1px;
+    top: 490px;
+    right: -1000px;
 }
 .s-9 span {
     list-style: inside;
