--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -40,6 +40,7 @@ b {
 @import "blocks/f6.scss";
 @import "blocks/f7.scss";
 @import "blocks/f8.scss";
+@import "blocks/b7.scss";
 @import "blocks/thanks.scss";
 @import "blocks/footer.scss";
 @import "blocks/tablet.scss";
